# openai-apps-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  build-all.mts  deploy.sh  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json  tsconfig.node.json
demo_server/: __init__.py  main.py  requirements.txt
src/: index.css  types.ts  use-display-mode.ts  use-openai-global.ts  use-widget-props.ts
src/demo/: demo.css  demo.jsx  index.jsx
