[project]
name = "openai-apps-demo"
version = "1.0.0"
description = "OpenAI Apps SDK Demo - Demo Widget Example"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "uvicorn>=0.32.1",
    "starlette>=0.41.3",
    "pydantic>=2.10.4",
]

[project.scripts]
demo-server = "demo_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo_server"]
